# Dev-Tools

./: .gitignore  README.md
android-utils/anti-android/: build.sh  dependent.txt  dx-push.sh  readme.md  run-command.sh  test-case.json  test_case.sh
android-utils/anti-android-master/: build.sh  dependent.txt  dx-init-env.sh  dx-pull.sh  strip.sh  test_case.sh
android-utils/anti-android-master/anti-headers/: dx_anti.h
android-utils/anti-android-master/anti-src/: dx_anti_prefix.h
android-utils/anti-android/anti-as-project/: build.gradle  settings.gradle
android-utils/anti-android/anti-build/: nameList.txt
android-utils/anti-android/anti-src/: dx_anti_stee.h
android-utils/apk-parser/: build.gradle  gradle.properties
android-utils/axml/: build.gradle
android-utils/crypto/: build.sh  buildlib_in_server.sh  clearlib.sh  dx-pull.sh  strip.sh  test_case.sh
android-utils/crypto/crypto-as-project/app/: CMakeLists.txt
android-utils/crypto/crypto-as-project/app/src/main/: AndroidManifest.xml
android-utils/crypto/crypto-as-project/app/src/main/cpp/: crypto  log.cc  log.h  native-lib.cpp
android-utils/crypto/crypto-as-project/app/src/main/java/com/dingxiang/mobile/crypto_as_project/: MainActivity.java
android-utils/crypto/crypto-as-project/app/src/main/res/layout/: activity_main.xml
android-utils/crypto/crypto-as-project/app/src/main/res/values/: strings.xml
android-utils/crypto/crypto-as-project/app/src/test/java/com/dingxiang/mobile/crypto_as_project/: ExampleUnitTest.java
android-utils/crypto/crypto-as-project/demo/: CMakeLists.txt  dx_demo.keystore
android-utils/crypto/crypto-as-project/demo/src/main/cpp/: native-lib.cpp
android-utils/crypto/crypto-as-project/demo/src/main/cpp/crypto/: dx_aes.h  dx_base64.h  dx_md5.h  dx_rc4.h  dx_sha1.h  dx_sm3.h  dx_wbaes.h  dx_xxtea.h
android-utils/crypto/crypto-as-project/demo/src/main/java/com/dingxiang/mobile/demo/: MainActivity.java
android-utils/crypto/crypto-as-project/demo/src/main/res/layout/: activity_main.xml
android-utils/crypto/crypto-as-project/demo/src/test/java/com/dingxiang/mobile/demo/: ExampleUnitTest.java
android-utils/crypto/crypto-build/: nameList.txt
android-utils/crypto/crypto-headers/: dx_api_prefix.h  dx_mtkey.h  dx_sha256.h  dx_sm4.h
android-utils/crypto/crypto-src/: dx_crypto_config.h  dx_crypto_prefix.h  dx_crypto_stee.h  dx_headers
android-utils/crypto/headers/: pkcs7.h  zconf.h
android-utils/crypto/src/: dx_utils_crypto_prefix.h  dx_utils_crypto_stee.h
android-utils/dexshell/: build.gradle  proguard-rules.pro
android-utils/dx-anti-android/: .gitlab-ci.yml  anti-test.md  ci-test.sh  dx-init-env.sh  strip.sh
android-utils/dx-anti-android/anti-headers/: dx_anti.h
android-utils/dx-anti-android/anti-src/: dx_anti_prefix.h
android-utils/dx-libc-ext/: .gitignore  .gitlab-ci.yml  clean.sh  dx-push.sh  package.sh
android-utils/elf-obs-tool/: README.md  dump_sym.sh  get_md5.py  random_symbol.py  start_obscure.sh  sym_black.cfg  sym_obscure_4_a.sh
android-utils/hook/: build.sh  clearlib.sh
android-utils/hook/HookZz/: Android.mk
android-utils/hook/as_demo/app/: CMakeLists.txt  build.gradle  hk-armv7-1.2.apk  proguard-rules.pro
android-utils/hook/as_demo/app/src/androidTest/java/com/test_hook/mt/as_demo/: ExampleInstrumentedTest.java
android-utils/hook/as_demo/app/src/main/: AndroidManifest.xml
android-utils/hook/as_demo/app/src/main/cpp/: Android.mk  Application.mk  TestFunc1.c  TestFunc2.h  TestFunc3.h  base64.c  hello.cpp  native-lib.cpp  needle.h  ufile.cpp  ufile.h  xxtea.h
android-utils/hook/as_demo/app/src/main/java/com/test_hook/mt/as_demo/: MainActivity.java
android-utils/hook/as_demo/app/src/main/res/layout/: activity_main.xml  content_main.xml
android-utils/hook/as_demo/app/src/main/res/menu/: menu_main.xml
android-utils/hook/as_demo/app/src/main/res/values/: strings.xml
android-utils/hook/as_demo/app/src/test/java/com/test_hook/mt/as_demo/: ExampleUnitTest.java
android-utils/hook/include/: dx_hook.h  dx_hook_config.h  dx_hook_prefix.h
android-utils/java-utils/xxLib/: AndroidManifest.xml  build.gradle  build_standalone.gradle  rm_no_use_for_guopan_game.sh  rm_no_use_for_guopan_sdk.sh
android-utils/libc-ext/: build-local.sh  build.sh  dx-pull.sh  strip.sh
android-utils/ndk-stack-tools/: trace_fatal_from_debug.sh
android-utils/ndk-utils/: build.sh
android-utils/ndk-utils/src/: Android.mk  jni_entry.cpp  jni_utils.cc  jni_utils.cpp  jni_utils.h  jnic_utils.cc  jnic_utils.h  json11.cc  json11.h  log.cc  log.h  test.cpp
android-utils/risk/as_risk/: test-build-native-memleak-apk.sh
android-utils/risk/xcode_proj/: test_build.sh
apks/: XposedInstaller_3.1.5.apk  accubattery_vip.apk
c:c++/gstcp-lib/: CMakeLists.txt  build-android.sh
c:c++/gstcp-lib/include/: TcpClient.h
c:c++/gstcp-lib/src/: TcpClient.cpp
crack/frida/: hook.js  main.py
crack/frida/scripts/: hook.js  template.js
crack/tools/: dumpso  ida-debug-apk.sh  injectso.py
crack/tools/mprop/: README.md  mprop
iOS/Prototype/: Podfile
iOS/Prototype/Prototype/: Info.plist
iOS/Prototype/Prototype.xcodeproj/: project.pbxproj
iOS/Prototype/Prototype.xcworkspace/: contents.xcworkspacedata
project/dx-upx/: FAQ.md  Makefile  Readme  Readme.md  build-stub.sh  build-upx.sh  clean-upx.sh  dx-pull.sh  init-env-linux.sh  src.dxlic
project/dx-upx/CheckSignApk/: CERT.RSA  SignApk.java
project/dx-upx/doc/: introduction.md
project/dx-upx/libelf/: Makefile  config.h  config.status  configure  libelf.pc
project/dx-upx/src/: Makefile  anti_debug.cpp  anti_debug.h  anti_debugging.cpp  anti_debugging.h  anti_dump.cpp  anti_dump.h  build_mac.sh  compress_zlib.cpp  conf.h  dx_license.h  except.cpp  (+39 more)
project/game-protect-android/: elf_struct.py  inject-kanxue.py  shell.py  target.apk
tools/: random_symbol.py
work-env/: .vimrc  .zshrc  init-env.sh
work-env/soft/: iterm2-config.sh  iterm2-profiles.json
work-env/vscode-settings/: init-env.sh  keybindings.json  settings.json
work-env/xcode-settings/: IDETextKeyBindingSet.plist  init-env.sh  xcode-white.idekeybindings
(+1461 files in other folders)
